java.util.Calendar classes replaced by java.time classes.

--- a/src/main/resources/styles/Calendar.css
+++ b/src/main/resources/styles/Calendar.css
@@ -2,7 +2,7 @@
 .title-label {
     -fx-font-size: 1.2em;
     /*-fx-font-weight: bold;*/
-    -fx-text-fill:  white;
+    /*-fx-text-fill:  white;*/
 }
 
 .weekday-label {
