--- a/src/main/resources/styles/Calendar.css
+++ b/src/main/resources/styles/Calendar.css
@@ -20,7 +20,7 @@
 .today-label {
     -fx-font-weight: bold;
     -fx-border-color: black;
-    -fx-border-width: 2px;
+    -fx-border-width: 1px;
 }
 
 .title-pane {
@@ -28,7 +28,7 @@
 }
 
 .weekday-pane {
-    -fx-background-color: black;
+    -fx-background-color: darkslategrey;
 }
 
 .week-pane {
